[package]
name = "rtp2wav"
version = "0.1.0"
authors = ["Dmitrii <smartkrio@yandex.ru>"]
edition = "2018"

[dependencies]
rtp-rs = "0.5.0"
tokio = { version = "0.2.11", features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
bytes = "0.5"
futures = "0.3.1"
http = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
httparse = "1.3"
time = "0.2"
wav = "0.1.1"
structopt = "0.3.9"
av-bitstream = "0.1.0"
libopus = { git = "https://github.com/rust-av/opus-rs.git" }